<resources>
    <string name="app_name">IEEE Admin</string>
    <string name="add_title_home">Events</string>
    <string name="add_title_dashboard">News</string>
    <string name="add_title_notifications">Notifications</string>
    <string name="add_title_excom">Excom</string>
    <string name="add_title_society">Society</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_event">Event</string>
    <string name="title_activity_not">Notification</string>
    <string name="title_event">Event</string>
    <string name="title_new">News</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main">MainActivity</string>
</resources>
