<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_event"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/add_title_home" />

    <item
        android:id="@+id/navigation_news"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/add_title_dashboard" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/add_title_notifications" />

    <item
        android:id="@+id/navigation_excom"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/add_title_excom" />
    <item
        android:id="@+id/navigation_society"
        android:icon="@drawable/ic_add_circle_black_24dp"
        android:title="@string/add_title_society" />

</menu>
